configs/docker-registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  namespace: docker
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - kestro-docker.hopto.org
    secretName: kestro-docker-tls
  rules:
  - host: kestro-docker.hopto.org
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: docker-registry
          servicePort: 5000
