configs/k3s-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-dashboard
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`k8s.kestro.home`)
    kind: Rule
    services:
    - name: headlamp
      port: 80
  tls:
    secretName: tls-k8s-dashboard
---
