configs/nzbget.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nzbget
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget-ui
  namespace: nzbget
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`nzbget.kestro.home`)
    services:
    - name: nzbget
      port: 6789
  tls:
    secretName: tls-nzbget-ui
---
