configs/prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-dashboard
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - kestro.hopto.org
    secretName: kestro-k8s-grafana-tls
  rules:
  - host: kestro.hopto.org
    http:
      paths:
      - path: /grafana/?(.*)
        backend:
          serviceName: grafana
          servicePort: 80
